src/objects/ffr__ReportingExecution__c.object
<CustomObject>
    <fields>
        <fullName>ffr__AsyncJobIds__c</fullName>
        <label>Asynchronous Job IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__CancelValue__c</fullName>
        <label>Cancel Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__FileName__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__RenderAs__c</fullName>
        <label>Render As</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>XLS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__ReportStatus__c</fullName>
        <label>Report Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Creating Layout</fullName>
                </value>
                <value>
                    <fullName>Getting Data</fullName>
                </value>
                <value>
                    <fullName>Waiting for Data and Layout Process</fullName>
                </value>
                <value>
                    <fullName>Launching Assembling Data and Layout Process</fullName>
                </value>
                <value>
                    <fullName>Waiting for Assembling Data Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__ReportingLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Log</label>
        <referenceTo>ffr__ReportingLog__c</referenceTo>
        <relationshipLabel>Executions</relationshipLabel>
        <relationshipName>Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__SaveToFile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save To File</label>
        <type>Checkbox</type>
    </fields>
    <label>Reporting Execution</label>
    <nameField>
        <label>Reporting Execution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Executions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>